@@ -8104,9 +8104,10 @@
       if (GET_CODE (operands[1]) == MEM
 	  && (rs6000_legitimate_offset_address_p (DFmode, XEXP (operands[1], 0),
 			reload_completed || reload_in_progress)
+	      || rs6000_legitimate_small_data_p (DFmode, XEXP (operands[1], 0))
 	      || GET_CODE (XEXP (operands[1], 0)) == REG
 	      || GET_CODE (XEXP (operands[1], 0)) == LO_SUM
-		  || GET_CODE (XEXP (operands[1], 0)) == PRE_INC
+	      || GET_CODE (XEXP (operands[1], 0)) == PRE_INC
 	      || GET_CODE (XEXP (operands[1], 0)) == PRE_DEC))
 	{
 	  /* If the low-address word is used in the address, we must load
@@ -8146,9 +8147,10 @@
       if (GET_CODE (operands[0]) == MEM
           && (rs6000_legitimate_offset_address_p (DFmode, XEXP (operands[0], 0),
 		    reload_completed || reload_in_progress)
+	      || rs6000_legitimate_small_data_p (DFmode, XEXP (operands[0], 0))
 	      || GET_CODE (XEXP (operands[0], 0)) == REG
     	      || GET_CODE (XEXP (operands[0], 0)) == LO_SUM
-		  || GET_CODE (XEXP (operands[0], 0)) == PRE_INC
+	      || GET_CODE (XEXP (operands[0], 0)) == PRE_INC
 	      || GET_CODE (XEXP (operands[0], 0)) == PRE_DEC))
 	return \"{st%U0|stw%U0} %1,%0\;{st|stw} %L1,%L0\";
       else
